assets/css/components/_photos.scss
.photos {
    overflow: hidden;
    &__grid {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;

        margin-bottom: 0.4em;
        margin-right: -$margin-gallery-small;
        @include min($tablet) { margin-right: -$margin-gallery-large; }

        &__item {
            // to position overlays
            position: relative;

            margin: 0 $margin-gallery-small $margin-gallery-small 0;
            @include min($tablet) {
                margin: 0 $margin-gallery-large $margin-gallery-large 0;
            }

            &__img {
                margin: 0;
                width: 100%;
                height: 100%;
                object-fit: cover;

                &:hover {
                    filter: brightness(75%);
                }
            }

            &__play {
                position: absolute;
                top: 8%;
                right: 2%;
                transform: translate(-50%, -50%);
                font-size: 3rem;
                color: $white;
                opacity: 0.8;
            }

        }

        &__lightbox {
            display: none;
            position: fixed;
            height: 100%;
            width: 100%;
            top: 0;
            left: 0;
            padding-left: $site-gutter-small;
            padding-right: $site-gutter-small;

            background-color: rgba(white, 0.94);
            z-index: 1;

            &:target {
                display: flex;
                justify-content: center;
                align-items: center;
            }

            &__img {
                position: relative;
                max-width: 100%;
                max-height: 75vh;
                object-fit: contain;
            }
        }
    }
}

.backdrop {
    position: absolute;
    display: block;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 998;
    cursor: url(/images/icons/x-cursor.png), pointer;
}

